src/objects/Titles__c.object
<CustomObject>
    <description>VIdeotel Titles</description>
    <fields>
        <fullName>BMS_Code__c</fullName>
        <inlineHelpText>Record Code from BMS</inlineHelpText>
        <label>BMS Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficial_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficial Organization</label>
        <referenceTo>Beneficial_Organizations__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CODE_NO_Number__c</fullName>
        <formula>VALUE(CODE_NO__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CODE NO (Number)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CODE_NO__c</fullName>
        <inlineHelpText>Enter the Title Code / Catalog Number associated with the Title</inlineHelpText>
        <label>CODE NO.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Included_in_VOD__c</fullName>
        <inlineHelpText>This title is part of a standard title for this type of VOD</inlineHelpText>
        <label>Included in VOD</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mini VOD</fullName>
                </value>
                <value>
                    <fullName>Midi VOD</fullName>
                </value>
                <value>
                    <fullName>Full VOD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Certification_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Certification for this title is available</inlineHelpText>
        <label>Is Certification Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_a_course__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if this title is offered as a course</inlineHelpText>
        <label>Is a course</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>Enter the length of the Title in minutes</inlineHelpText>
        <label>Length</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <inlineHelpText>Enter the List Price</inlineHelpText>
        <label>List Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Platform_Type__c</fullName>
        <inlineHelpText>Select the platform type that the title is associated with.</inlineHelpText>
        <label>Platform Type (Wet/Dry)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Wet Cargo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <inlineHelpText>Select the applicable Targeted Users/Ranks</inlineHelpText>
        <label>Rank</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deck Senior Officer</fullName>
                </value>
                <value>
                    <fullName>Engineering Room Senior Officer</fullName>
                </value>
                <value>
                    <fullName>Deck Junior Officer</fullName>
                </value>
                <value>
                    <fullName>Engineering Room Junior Officer</fullName>
                </value>
                <value>
                    <fullName>Engine &amp; General Purpose Rating</fullName>
                </value>
                <value>
                    <fullName>Deck &amp; general Purpose Ratings</fullName>
                </value>
                <value>
                    <fullName>Electrical Officers &amp; ETO&apos;s</fullName>
                </value>
                <value>
                    <fullName>Catering Officer, Cook &amp; Catering</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regulations_Addressed__c</fullName>
        <label>Regulations Addressed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STCW_FunctionalArea__c</fullName>
        <description>12/5/14 Change requested by Raal Harris and Andrew Eardly as some titles are used in multiple categories.</description>
        <inlineHelpText>Select the appropriate STCW Functional Area</inlineHelpText>
        <label>STCW Functional Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cargo handling &amp; stowage</fullName>
                </value>
                <value>
                    <fullName>Electrical, electronic &amp; control engrg.</fullName>
                </value>
                <value>
                    <fullName>Maintenance &amp; repairs</fullName>
                </value>
                <value>
                    <fullName>Marine engineering</fullName>
                </value>
                <value>
                    <fullName>Maritime training courses</fullName>
                </value>
                <value>
                    <fullName>Navigation</fullName>
                </value>
                <value>
                    <fullName>Operation_of_the_Ship</fullName>
                </value>
                <value>
                    <fullName>Other subject areas</fullName>
                </value>
                <value>
                    <fullName>Radio communications</fullName>
                </value>
                <value>
                    <fullName>Emerg, occup. safety, med. care &amp; survl.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Series that the title is related</inlineHelpText>
        <label>Series</label>
        <referenceTo>Training_Series__c</referenceTo>
        <relationshipLabel>Titles</relationshipLabel>
        <relationshipName>Titles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Production</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Description__c</fullName>
        <inlineHelpText>Rich Text Format of the Description of a Title</inlineHelpText>
        <label>Title Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title_Platform_Detail__c</fullName>
        <inlineHelpText>Platform(s) that are related to the specific Title</inlineHelpText>
        <label>Title Platform Detail</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bulk Carrier</fullName>
                </value>
                <value>
                    <fullName>Chemical Tanker</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Container Ship</fullName>
                </value>
                <value>
                    <fullName>Crude Oil Tanker</fullName>
                </value>
                <value>
                    <fullName>Crude Tanker</fullName>
                </value>
                <value>
                    <fullName>Dry Cargo</fullName>
                </value>
                <value>
                    <fullName>Gas Carrier</fullName>
                </value>
                <value>
                    <fullName>General Cargo Vessel</fullName>
                </value>
                <value>
                    <fullName>Heavy Lift Vessel</fullName>
                </value>
                <value>
                    <fullName>LNG Carriers</fullName>
                </value>
                <value>
                    <fullName>LPG Carrier</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
                <value>
                    <fullName>Offshore Supply Vessel</fullName>
                </value>
                <value>
                    <fullName>Passenger</fullName>
                </value>
                <value>
                    <fullName>Product Oil Tanker</fullName>
                </value>
                <value>
                    <fullName>Reefer</fullName>
                </value>
                <value>
                    <fullName>RO-RO</fullName>
                </value>
                <value>
                    <fullName>RO-RO PCC</fullName>
                </value>
                <value>
                    <fullName>Seismic Survey Vessels</fullName>
                </value>
                <value>
                    <fullName>Tankers</fullName>
                </value>
                <value>
                    <fullName>Tugs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VP_NO__c</fullName>
        <inlineHelpText>Enter the VP# that is associated with the Title</inlineHelpText>
        <label>VP NO.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Titles</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Titles</fullName>
        <columns>NAME</columns>
        <columns>CODE_NO__c</columns>
        <columns>List_Price__c</columns>
        <columns>Series__c</columns>
        <columns>VP_NO__c</columns>
        <columns>Length__c</columns>
        <columns>Platform_Type__c</columns>
        <columns>STCW_FunctionalArea__c</columns>
        <columns>Is_a_course__c</columns>
        <columns>Is_Certification_Available__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Titles</label>
    </listViews>
    <listViews>
        <fullName>Order_Administration_Titles</fullName>
        <filterScope>Queue</filterScope>
        <label>Order Administration</label>
        <queue>Order_Administration</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Titles_with_STCW_Codes_from_CTS</fullName>
        <columns>NAME</columns>
        <columns>CODE_NO__c</columns>
        <columns>Title_Description__c</columns>
        <columns>STCW_FunctionalArea__c</columns>
        <columns>Series__c</columns>
        <columns>List_Price__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>STCW_FunctionalArea__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Titles with STCW Codes from CTS</label>
    </listViews>
    <nameField>
        <label>Title Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Titles</pluralLabel>
    <recordTypes>
        <fullName>Titles</fullName>
        <active>true</active>
        <description>Titles Default Record Type</description>
        <label>Titles</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>